objects/Job_Ticket__c.object
<CustomObject>
    <label>Job Ticket</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Job Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Job1__c</fullName>
        <label>Job</label>
        <referenceTo>Artera_Job__c</referenceTo>
        <relationshipLabel>Job Tickets</relationshipLabel>
        <relationshipName>Job_Tickets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#FF0000</color>
                    <label>Cancelled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>if(( End_Time__c - Start_Time__c  ) /3600000 &lt;0,0,( End_Time__c - Start_Time__c  ) /3600000 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billable_Hours__c</fullName>
        <label>Billable Hours</label>
        <summarizedField>Job_Ticket_Detail__c.Operator_Hours__c</summarizedField>
        <summaryForeignKey>Job_Ticket_Detail__c.Job_Ticket__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Job_Ticket_Url__c</fullName>
        <label>Job Ticket Url</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_email_notify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No email notify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clone_Job_Ticket__c</fullName>
        <formula>HYPERLINK(&apos;https://powerteamservices239587345.lightning.force.com/lightning/r/Job_Ticket__c/&apos;+Id+&apos;/clone?useRecordTypeCheck=1&amp;backgroundContext=%2Flightning%2Fr%2FArtera_Job__c%2F&apos;+Job1__r.Id+&apos;%2Fview&amp;count=2&apos;, &apos;Clone&apos; ,&apos;_self&apos;)</formula>
        <label>Clone Job Ticket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Number__c</fullName>
        <label>Customer Reference Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Job_completed_validation</fullName>
        <active>true</active>
        <description>when job status is completed the user is not able to edit the record Apart from the user who has the permission to bypass the validation.</description>
        <errorConditionFormula>AND(ISPICKVAL(Job1__r.Status__c, &quot;Completed&quot;), $User.Bypass_Validation__c = FALSE)</errorConditionFormula>
        <errorMessage>You can&apos;t change the record information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Time_not_greater_than_End_Time</fullName>
        <active>false</active>
        <errorConditionFormula>Start_Time__c &gt;  End_Time__c</errorConditionFormula>
        <errorDisplayField>End_Time__c</errorDisplayField>
        <errorMessage>Error - End Time Should be Greater than Start Time</errorMessage>
    </validationRules>
</CustomObject>